--- a/portfolio.html
+++ b/portfolio.html
@@ -40,9 +40,7 @@
             Ce portfolio a pour but de présenter mon parcours scolaire ainsi que mes compétences et mes projets <br>
             sur lesquels j'ai travaillé tout au long de mon parcours scolaire. <br>
             Vous pouvez également visualiser mon CV et le télécharger. <br><br><br>
-            <form method="POST" action="https://github.com/rayhanebousnina/CVPRO.git" id="cv">
-                <input type="submit" name="cv" value="Voir CV" id="button">
-            </form>            
+            <a class="button" href="https://github.com/rayhanebousnina/CVPRO.git"><button type="button">VOIR CV</button></a>
         </p>      
     </div>
     <!--la partie diplômes et formations-->
@@ -61,7 +59,7 @@
             De septembre 2017 à janvier 2020
         </div>
     </div>
-    <hr>
+    
     <div class="formation">
         <img id="logoisima" src="isima.jpg" alt="logoisima">
         <div class="format">
@@ -96,6 +94,7 @@
                 Expérimentation sur le système d’interrogation SQUIN <br> avec l'approche Link Traversal based Query Execution.
             </div>
             <div>
+                <u class="format">Date: </u><br><br>
                 De février 2019 à janvier 2020
             </div>
         </div> 
@@ -118,6 +117,7 @@
                 Conception et réalisation d'une application web <br> de réservation des locaux en ligne .
             </div>
             <div>
+                <u class="format">Date: </u><br><br>
                 D'avril 2017 à juillet 2017
             </div>
         </div> 
